samples/_failures_safe/1761166716_14fe7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_386b839c.c: In function ‘main’:
./samples/SAFE/__tmp_386b839c.c:150:17: error: expected expression at end of input
  150 |                 printf("%d! = %.0f\n",
      |                 ^~~~~~
./samples/SAFE/__tmp_386b839c.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_386b839c.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_386b839c.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_386b839c.c:150:17: error: expected declaration or statement at end of input
